--- a/fixture/default/core/Mage/ShoppingCartPriceRule/uimap/admin/ShoppingCartPriceRule.yml
+++ b/fixture/default/core/Mage/ShoppingCartPriceRule/uimap/admin/ShoppingCartPriceRule.yml
@@ -107,6 +107,8 @@ create_shopping_cart_price_rule:
                                     dropdowns:
                                         select_conditions_aggregator: //select[@name='rule[conditions][1][aggregator]']
                                         select_conditions_value: //select[@name='rule[conditions][1][value]']
+                                    pageelements:
+                                        apply_for_rule_condition_row: /ul/li
                             -
                                 rule_condition_item:
                                     xpath: //ul[@id='conditions__%condition%__children']
@@ -125,6 +127,7 @@ create_shopping_cart_price_rule:
                                         rule_condition_item_category_text: %categoryXpath%/div/a/span
                                         rule_condition_item_category_index_text: %categoryXpath%[%index%]/div/a/span
                                         rule_condition_item_category_index_link: %categoryXpath%[%index%]/div/a
+                                        rule_condition_item_row: /li
                                     dropdowns:
                                         select_condition_new_child: /li[%key%]//span[contains(.//@src,'rule_component_add')]//select
                                         select_condition_operator: /li[%key%]/span[contains(.//@name,'operator')]//select
@@ -162,6 +165,8 @@ create_shopping_cart_price_rule:
                                     dropdowns:
                                         select_actions_aggregator: //select[@name='rule[actions][1][aggregator]']
                                         select_actions_value: //select[@name='rule[actions][1][value]']
+                                    pageelements:
+                                        apply_for_rule_action_row: /ul/li
                             -
                                 rule_action_item:
                                     xpath: //ul[@id='actions__%condition%__children']
@@ -180,6 +185,7 @@ create_shopping_cart_price_rule:
                                         rule_action_item_category_text: %categoryXpath%/div/a/span
                                         rule_action_item_category_index_text: %categoryXpath%[%index%]/div/a/span
                                         rule_action_item_category_index_link: %categoryXpath%[%index%]/div/a
+                                        rule_action_item_row: /li
                                     dropdowns:
                                         select_action_new_child: /li[%key%]//span[contains(.//@src,'rule_component_add')]//select
                                         select_action_operator: /li[%key%]/span[contains(.//@name,'operator')]//select
