--- a/dev/tests/functional/fixture/enterprise2/core/Mage/Category/uimap/admin/Category.yml
+++ b/dev/tests/functional/fixture/enterprise2/core/Mage/Category/uimap/admin/Category.yml
@@ -32,21 +32,26 @@ manage_categories:
         form:
             tabs:
                 -
-                     category_pemissions:
-                         xpath: //a[@id='category_info_tabs_permissions']/span
-                         fieldsets:
-                             -
-                                 category_permissions:
-                                     xpath: //div[@id='category_permissions_%cat_id%']
-                                     dropdowns:
-                                         website: //select[@name='general[permissions][%row%][website_id]']
-                                         customer_group: //select[@name='general[permissions][%row%][customer_group_id]']
-                                     fields:
-                                         browsing_category: //input[@id='category_permissions_%row%_grant_catalog_category_view_%permissionCategory%']
-                                         displaying_price: //input[@id='category_permissions_%row%_grant_catalog_product_price_%permissionPrice%']
-                                         add_to_cart: //input[@id='category_permissions_%row%_grant_checkout_items_%permissionCart%']
-                                     buttons:
-                                         delete_permissions: //*[@id='category_permissions_%cat_id%_row_%row%_delete_button']
-                         buttons:
-                             new_permission: //button[span='New Permission']
+                    category_permissions_tab:
+                        xpath: //a[@id='category_info_tabs_permissions']/span
+                        fieldsets:
+                            -
+                                category_permissions:
+                                    xpath: //div[@id='category_info_tabs_permissions_content']
+                                    dropdowns:
+                                        website: //select[@name='general[permissions][%row%][website_id]']
+                                        customer_group: //select[@name='general[permissions][%row%][customer_group_id]']
+                                    radiobuttons:
+                                        browsing_category_allow: //input[@id='category_permissions_%row%_grant_catalog_category_view_allow']
+                                        browsing_category_deny: //input[@id='category_permissions_%row%_grant_catalog_category_view_deny']
+                                        browsing_category_use_parent: //input[@id='category_permissions_%row%_grant_catalog_category_view_default']
+                                        displaying_price_allow: //input[@id='category_permissions_%row%_grant_catalog_product_price_allow']
+                                        displaying_price_deny: //input[@id='category_permissions_%row%_grant_catalog_product_price_deny']
+                                        displaying_price_use_parent: //input[@id='category_permissions_%row%_grant_catalog_product_price_default']
+                                        add_to_cart_allow: //input[@id='category_permissions_%row%_grant_checkout_items_allow']
+                                        add_to_cart_deny: //input[@id='category_permissions_%row%_grant_checkout_items_deny']
+                                        add_to_cart_use_parent: //input[@id='category_permissions_%row%_grant_checkout_items_default']
+                                    buttons:
+                                        delete_permissions: //button[contains(@id, '_row_%row%_delete_button')]
+                                        new_permission: //button[span='New Permission']
 
