[UIMAP][DATA] Fixed MenuElements data and removed empty titles

--- a/dev/tests/functional/fixture/community2/core/Mage/AdminMenu/data/MenuElements.yml
+++ b/dev/tests/functional/fixture/community2/core/Mage/AdminMenu/data/MenuElements.yml
@@ -155,5 +155,5 @@ menu:
             system_package_extentions:
         cache_storage_management:
         index_management:
-        sales_order_status:
+        order_statuses:
         system_configuration:
