Fixed MAGETWO-2045: Parameters Per Scenario in Performance Tests - renamed Benchmark_Application class to Benchmark_Installer in order to better show its role + refactored this class a little - moved setup logic from main script run_scenarios.php to bootstrap.php - removed excessive Magento_Shell_Exception in favor of Magento_Exception - added 'jmeter_jar_file' option to config - refactored Benchmark_Scenario, so   a) the object can be reused for scenario running   b) dry run is included in normal run - added 'report' dir to a list of ignored directories

--- a/dev/tests/performance/config.php.dist
+++ b/dev/tests/performance/config.php.dist
@@ -12,6 +12,11 @@ return array(
     'application' => array(
         'url_host' => '127.0.0.1',
         'url_path' => '/magento/',
+        /**
+         * Path to JMeter executable. If empty, then env value 'jmeter_jar_file' is taken. If this value is empty as
+         * well, then default value is used.
+         */
+        'jmeter_jar_file' => '',
         /* Optional installation configuration. If omitted, no installation occurs. */
         'installation' => array(
             /**
