--- a/dev/tests/functional/fixture/enterprise2/core/Mage/SystemConfiguration/uimap/admin/SystemConfiguration.yml
+++ b/dev/tests/functional/fixture/enterprise2/core/Mage/SystemConfiguration/uimap/admin/SystemConfiguration.yml
@@ -41,7 +41,7 @@ system_configuration:
                                         access_restriction: //*[@id='general_restriction_is_active']
                                         restriction_mode: //*[@id='general_restriction_mode']
                                         startup_page: //*[@id='general_restriction_http_redirect']
-                                        landing_page: //*[@id='general_restriction_cms_page']
+                                        landing_page_restriction: //*[@id='general_restriction_cms_page']
                                         http_response: //*[@id='general_restriction_http_status']
                 -
                     catalog_catalog:
