[TESTS] fixed cancelPendingOrderFromOrderPage tests

--- a/fixture/default/core/Mage/IndexManagement/uimap/admin/IndexManagement.yml
+++ b/fixture/default/core/Mage/IndexManagement/uimap/admin/IndexManagement.yml
@@ -47,6 +47,8 @@ index_management:
                             select_visible: //a[text()='Select Visible']
                             unselect_visible: //a[text()='Unselect Visible']
                             reindex_index: //tr[td[normalize-space(text())='%indexName%']]//a[text()='Reindex Data']
+                            reindex_required_index: //tr[normalize-space(td/span)='Reindex Required']//a[text()='Reindex Data']
+                            update_required_index: //tr[normalize-space(td/span)='Yes']//a[text()='Reindex Data']
                         pageelements:
                             selected_items: //strong[@id='indexer_processes_grid_massaction-count']
                             reindex_required: //tr[normalize-space(td/span)='Reindex Required']
