--- a/dev/tests/functional/fixture/enterprise2/core/Mage/ImportExport/data/ImportExportScheduled.yml
+++ b/dev/tests/functional/fixture/enterprise2/core/Mage/ImportExport/data/ImportExportScheduled.yml
@@ -13,7 +13,8 @@ scheduled_export:
    name: test_export_%randomize%
    description: test_export_description_%randomize%
    entity_type: Customers
-   file_format_version: %noValue%
+   file_format_version: Magento 1.7 format
+   entity_subtype: %noValue%
    file_format: CSV
    start_time_hours: %noValue%
    start_time_minutes: %noValue%
@@ -45,8 +46,10 @@ scheduled_import:
    name: test_import_%randomize%
    description: test_import_description_%randomize%
    entity_type: Customers
+   entity_type: Customers
+   file_format_version: Magento 1.7 format
+   entity_subtype: %noValue%
    behavior: Append Complex Data
-   file_format_version: %noValue%
    start_time_hours: %noValue%
    start_time_minutes: %noValue%
    start_time_seconds: %noValue%
