--- a/fixture/enterprise2/core/Mage/ImportExport/uimap/admin/ImportExportScheduled.yml
+++ b/fixture/enterprise2/core/Mage/ImportExport/uimap/admin/ImportExportScheduled.yml
@@ -124,6 +124,9 @@ scheduled_importexport_add:
             reset:  //button[span='Reset']
             save:   //button[span='Save']
             delete: //button[span='Delete']
+        messages:
+            delete_confirmation_export: Are you sure you want to delete this scheduled export?
+            delete_confirmation_import: Are you sure you want to delete this scheduled import?
 
 scheduled_importexport_edit:
     mca: scheduled_operation/edit/id/%id%/
