--- a/dev/tests/functional/fixture/enterprise2/core/Mage/_uimapIncludes/frontend.yml
+++ b/dev/tests/functional/fixture/enterprise2/core/Mage/_uimapIncludes/frontend.yml
@@ -51,3 +51,5 @@ enterprice_frontend_header:
                     general_elements:
                         pageelements:
                             front_navigation_menu: //*[@id='nav']
+                        buttons:
+                            category_button: //ul[@id="nav"]//li[contains(a/span,"%catName%")]
