[TEST][UIMAP][HELPER] MAGETWO-2330 - implemented test for TC TL-MAGE-5849, TL-MAGE-5850, TL-MAGE-5851

--- a/fixture/default/core/Mage/ReviewAndRating/uimap/admin/ReviewAndRating.yml
+++ b/fixture/default/core/Mage/ReviewAndRating/uimap/admin/ReviewAndRating.yml
@@ -215,6 +215,10 @@ edit_review:
             reset: //button[span='Reset']
             save_review: //button[span='Save Review']
             delete_review: //button[span='Delete Review']
+            prev_review: //button[span='Previous']
+            prev_save_review: //button[span='Save and Previous']
+            next_review: //button[span='Next']
+            next_save_review: //button[span='Save and Next']
         messages: *reviewMessages
 
 edit_pending_review:
